img category width version mobile

--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -40,6 +40,11 @@
         left: 100%;
         margin-left: -200%;
         float: none!important;
+
+        @media (max-width: 767px) {
+            width:767px;
+            object-fit: cover;
+        }
         
     }
 }
