--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -262,7 +262,7 @@
                             border: none;
                             background: none;
                             outline: none;
-                            margin-left: 140px;
+                            margin-left: 130px;
 
                             @media (max-width: 480px) {
                                 margin-left: 125px;
@@ -284,6 +284,7 @@
                 }
                 .product-price-and-shipping {
                     position: absolute;
+                    top: calc(100% + 20px);
                     right: 0;
                     .price {
                         font-family: $roboto;
