--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -470,7 +470,12 @@
     }
 }
 
-#pagenotfound #wrapper .container {
+#pagenotfound #wrapper .container, 
+#category-id-71 #wrapper .container {
     width: 1159px;
     margin: 0 auto;
+
+    @media (max-width: 960px) {
+        padding: 0 15px;
+    }
 }
