--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -478,8 +478,11 @@
 .category-id-71 #wrapper .container #category-description,
 .category-id-71 #wrapper .container #products,
 .category-id-71 #wrapper .container .page-home {
-    width: 1159px;
+    width: 1159px!important;
     margin: 0 auto;
 
-    
+    @media (max-width: 960px) {
+        width: 100%;
+        padding: 0 15px;
+    }
 }
