--- a/assets/scss/bentos.scss
+++ b/assets/scss/bentos.scss
@@ -42,7 +42,7 @@
                             max-width: 412.89px;
 
                             @media (max-width: 480px) {
-                                width: 100%;
+                                width: 351px;
                             }
                         }
                     }   
