--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -475,10 +475,10 @@
     margin: 0 auto;
 }
 
-.category-id-71 #wrapper .container #category-description,
-.category-id-71 #wrapper .container #products,
-.category-id-71 #wrapper .container .page-home {
-    width: 1159px!important;
+#category.category-id-71 #wrapper .container #category-description,
+#category.category-id-71 #wrapper .container #products,
+#category.category-id-71 #wrapper .container .page-home {
+    width: 1159px;
     margin: 0 auto;
 
     @media (max-width: 960px) {
