--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -78,6 +78,11 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                 a:hover {
                     text-decoration: underline !important;
                 }
+
+                &:nth-child(9),
+                &:nth-child(10) {
+                    display:none;
+                }
             }
         }
         .menu-block-name {
