--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -222,6 +222,11 @@
                                 position: relative;
                                 font-size: 24px;
                                 padding-top: 5px;
+
+                                @media (max-width: 480px) {
+                                    font-size: 16px;
+                                    font-weight: bold;
+                                }
                             }
                             
                             .up:before,
@@ -255,6 +260,7 @@
                                 height: 2rem;
                                 text-align: center;
                                 outline: none;
+                                border-radius: 0;
                             }
                         }
 
