ajout rapide home page product et categorie

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -157,6 +157,11 @@
                                                 position: relative;
                                                 font-size: 24px;
                                                 padding-top: 5px;
+
+                                                @media (max-width: 480px) {
+                                                    font-size: 16px;
+                                                    font-weight: bold;
+                                                }
                                             }
                                             
                                             .up:before,
@@ -191,6 +196,7 @@
                                                 height: 2rem;
                                                 text-align: center;
                                                 outline: none;
+                                                border-radius: 0;
                                             }
                                         }
 
