--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -784,6 +784,11 @@
                             position: relative;
                             font-size: 24px;
                             padding-top: 5px;
+
+                            @media (max-width: 480px) {
+                                font-size: 16px;
+                                font-weight: bold;
+                            }
                         }
                         
                         .up:before,
@@ -818,6 +823,7 @@
                             height: 2rem;
                             text-align: center;
                             outline: none;
+                            border-radius: 0;
                         }
                     }
 
@@ -892,7 +898,7 @@
     .origin {
         display: none;
     }
-    
+
     .info-actu {
         h2 {
             margin-bottom: 80px;
