--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -11,6 +11,11 @@
             height: 253.02px;
             position: relative;
             bottom: 100px;
+
+            @media (max-width: 768px) {
+                width: 100%;
+                bottom: 20px;
+            }
         }
         h1 {
             position: relative;
@@ -36,9 +41,10 @@
     }
     .bloc-abonnement {
         margin-top: 40px; 
-        
+
         @media (max-width: 768px) {
             padding: 2em 1.5em;
+            margin-top: 100px;
         }
         padding: 30px 120px;
         background-color: #d3ede2;
