--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -55,8 +55,12 @@
             }
             .bloc-content {
                 padding: 0 140px 60px;
-                @media (max-width: 768px) {
+                @media (min-width: 481px) and (max-width: 768px) {
                     padding: 50px 43px;
+                }
+
+                @media (max-width: 480px) {
+                    padding: 50px 15px;
                 }
                 img {
                     max-width: 100%;
