--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -394,6 +394,12 @@
 
                                             .owl-item {
                                                 height: 60px;
+
+                                                &:nth-child(2) {
+                                                    @media (max-width: 480px) {
+                                                        margin: 0 20px;
+                                                    }
+                                                }
                                             }
                                         }
 
