--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -65,6 +65,7 @@
                     >div {
                         @media (max-width: 480px) {
                             width: 100%;
+                            margin-bottom:0;
                         }
                         margin-bottom: 100px;
                         position: relative;
@@ -416,6 +417,7 @@
     
     @media (max-width: 960px) {
         padding: 0 15px;
+        margin-top: 30px;
     }
 }
 
