--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -49,18 +49,20 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             text-align: center;
         }
     }
-    .menu-block {
 
-        &:first-child {
-            .recipe-ingredient {
-                i {
-                    a {
-                        font-weight: bold;
-                    }
+    &:first-child {
+        .recipe-ingredient {
+            i {
+                a {
+                    font-weight: bold;
                 }
             }
         }
+    }
 
+
+
+    .menu-block {
 
         .menulink.current {
             text-decoration: underline;
@@ -92,7 +94,8 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                 }
 
                 &:nth-child(9),
-                &:nth-child(10) {
+                &:nth-child(10),
+                &:nth-child(11) {
                     display:none;
                 }
             }
