--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -141,6 +141,9 @@
                     }
                 }
                 .col-md-7 {
+                    .insta {
+                        font-weight: bold;
+                    }
                     .col-lg-4 {
                         .titre {
                             font-size: 20px;
