--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -252,6 +252,11 @@
                                                     padding: 2px 20px 15px;
                                                     height: 27px;
                                                     margin-bottom: 0;
+
+                                                    @media (max-width: 480px) {
+                                                        padding: 2px 15px 15px;
+                                                    }
+
                                                     span {
                                                         left: 0;
                                                         font-size: 16px;
