--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -20,12 +20,15 @@
                     }
                 }
                 .home_popup {
-                    display: none;
+                    display: block;
                     
                     #list-builder {
-                        opacity: 0.5;
+                        display:block;
+                        opacity: 0;
+                        position: relative;
                     }
                     #popup-box {
+                        display:block;
                         height: auto;
                         @media (max-width: 769px) {
                             width: 300px;
@@ -40,6 +43,8 @@
                         }
                         #popup-box-content {
                             height: auto;
+                            margin: 0;
+                            background-color: #FEF9F4;
                             @media (max-width: 769px) {
                                 border: none;
                             }
@@ -98,7 +103,7 @@
                                         border-left: none;
                                         border-right: none;
                                         border-top: none;
-                                        background: $white;
+                                        background: #FEF9F4;
                                     }
                                     .form-control:focus {
                                         outline: none;
@@ -175,7 +180,7 @@
                 }
             }
             .container {
-                position: relative;
+                
                 @media (min-width: 768px) {
                     .right-block {
                         padding-left: 2rem;
@@ -302,6 +307,7 @@
                 left: 0;
                 img {
                     width: 30px;
+                    height: 30px;
                 }
             }
             .yuka-note {
