--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -20,7 +20,7 @@
                     }
                 }
                 .home_popup {
-                    display: block;
+                    display: none;
                     
                     #list-builder {
                         display:block;
