--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -459,7 +459,8 @@
     }
 }
 
-#cart #wrapper .container {
+#cart #wrapper .container
+#authentication #wrapper .container {
     width: 1159px;
     margin: 0 auto;
 
@@ -494,7 +495,7 @@
 .cms-id-24  #wrapper .cuisine-nature,
 .cms-id-25 #wrapper .bloc,
 .cms-id-14 #wrapper .bloc,
-.page-cms-13 #wrapper .bloc {
+.cms-id-13 #wrapper .bloc {
     width: 961px;
     margin: 0 auto;
 
@@ -504,7 +505,7 @@
     }
 }
 
-.page-cms-13 #wrapper .bloc .chapeau {
+.cms-id-13 #wrapper .bloc .chapeau {
     padding: 60px 140px;
 }
 
