--- a/assets/scss/my-account.scss
+++ b/assets/scss/my-account.scss
@@ -88,8 +88,8 @@
                 z-index: 2;
                 top: 50%;
                 left: 50%;
-                transform: translate(-50%, -50%)''
-
+                transform: translate(-50%, -50%);
+                margin:0!important;
             }
         }
     }
