--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -459,7 +459,7 @@
     }
 }
 
-#cart #wrapper .container
+#cart #wrapper .container,
 #authentication #wrapper .container {
     width: 1159px;
     margin: 0 auto;
