--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -6,6 +6,9 @@
                 hr {
                     margin-bottom: 20px;
                 }
+                .label {
+                    padding-left: 25px;
+                }
                 .product-line-grid {
                     height: 125px;
                     .product-line-grid-body {
@@ -25,8 +28,6 @@
                             a {
                                 font-size: 16px;
                                 font-weight: bold;
-
-                                
                             }
 
                             a::first-letter {
