--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -5,7 +5,6 @@
 .container {
     padding: 0;
     #main {
-
         #carousel {
             ul {
                 height: auto;
@@ -91,7 +90,7 @@
             margin-top: 50px;
         }
         margin-top: 90px;
-        h2 {
+        .product-title {
             @include title;
             margin-bottom: 50px;
         }
