--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -90,7 +90,7 @@
             margin-top: 50px;
         }
         margin-top: 90px;
-        .product-title {
+        .h2 {
             @include title;
             margin-bottom: 50px;
         }
