--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -20,7 +20,7 @@
                     }
                 }
                 .home_popup {
-                    display: none;
+                    display: block;
                     
                     #list-builder {
                         display:block;
@@ -159,23 +159,24 @@
                             font-size: 14px;
                             font-family: $alegreya;
                         }
-                        
-                        #footer_sub_menu_65945 {
-                            li {
-                                &:nth-child(2),
-                                &:nth-child(4),
-                                &:nth-child(7),
-                                &:nth-child(8) {
-                                    margin-bottom: 30px;
-                                }
 
-                                &:nth-child(9),
-                                &:last-child{
-                                    display:none;
+                        &:nth-child(3) {
+                            ul {
+                                li {
+                                    &:nth-child(2),
+                                    &:nth-child(4),
+                                    &:nth-child(7),
+                                    &:nth-child(8) {
+                                        margin-bottom: 30px;
+                                    }
+
+                                    &:nth-child(9),
+                                    &:last-child{
+                                        display:none;
+                                    }
                                 }
                             }
                         }
-                        
                     }
                 }
             }
