--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -504,8 +504,8 @@
     }
 }
 
-.cms-id-13 #wrapper .bloc .chapeau {
-    padding: 60px 140px;
+.cms-id-13 .chapeau {
+    background-color: $white;
 }
 
 #search #wrapper > .container {
