--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -330,6 +330,7 @@
             // }
         }
         .membre {
+            display:none;
             margin-top: 30px;
             a {
                 font-family: 'RobotoMono';
@@ -344,7 +345,7 @@
         .text-sm-center {
             margin-top: 100px;
             text-align: center;
-            color: $grey_footer;
+            color: $black;
 
             @media (max-width: 992px) {
                 margin-top: 20px;
@@ -352,7 +353,7 @@
             a {
                 display: inline-block;
                 padding-left: 1rem;
-                color: $grey_footer;
+                color: $black;
             }
             @media (max-width: 480px) {
                 a {
