--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -470,7 +470,8 @@
 }
 
 #stores #wrapper .container,
-#my-account #wrapper .container {
+#my-account #wrapper .container,
+#checkout #wrapper .container{
     width: 1159px;
     margin: 0 auto;
 
