--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -52,8 +52,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
 
 
     .menu-block {
-
-        &:first-child {
+        &:nth-child(2) {
             i {
                 &:nth-child(9),
                 &:nth-child(10),
