--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -471,7 +471,8 @@
 
 #stores #wrapper .container,
 #my-account #wrapper .container,
-#checkout #wrapper .container {
+#checkout #wrapper .container,
+#order-confirmation #wrapper .container {
     width: 1159px;
     margin: 0 auto;
 
