--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -30,6 +30,21 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
     padding-bottom: 18px;
 }
 
+#mobile_top_menu_wrapper {
+
+    .menu-block {
+        &:nth-child(3) {
+            i {
+                &:nth-child(9),
+                &:nth-child(10),
+                &:last-child {
+                    display:none;
+                }
+            }
+        }
+    }
+}
+
 .top-menu .sub-menu.collapse {
     justify-content: space-between;
     padding: 0 30px;
