--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -946,8 +946,7 @@
                     @media screen and (max-width: 767px) {
                         width: 470px;
                         height: 313px;
-                        position: absolute;
-                        left: -15px;
+                        
                     }
                 }
                 @media screen and (max-width: 767px) {
@@ -961,14 +960,22 @@
             .secret_cuisine {
                 float: right;
                 position: relative;
+                @media screen and (max-width: 480px) {
+                            width: 392px;
+                            height: 593px;
+                        }
                 img {
                     width: 694px;
                     height: 461px;
                     @media screen and (max-width: 767px) {
                         width: 470px;
                         height: 312.2px;
-                        position: absolute;
-                        right: -15px;
+                        
+                        @media screen and (max-width: 480px) {
+                            height: auto;
+                            width: 100%;
+                            margin-left: 30px;
+                        }
                     }
                 }
                 @media screen and (max-width: 767px) {
@@ -991,6 +998,11 @@
                         position: absolute;
                         left: -15px;
                     }
+                    @media screen and (max-width: 480px) {
+                        height: auto;
+                        width: 100%;
+                        margin-left: -30px;
+                    }
                 }
                 @media screen and (max-width: 767px) {
                     width: 600px;
@@ -1001,17 +1013,11 @@
                 }
             }
             .text-info {
-                background-color: $pink;
-                padding: 40px 30px;
                 position: absolute;
                 top: 25%;
                 right: -100px;
                 width: 500px;
                 z-index: 99;
-                color: $black;
-                font-family: $roboto-light;
-                font-size: 13px;
-                line-height: 17px;
                 @media (max-width: 769px) {
                     right: 13px;
                     bottom: 65px;
@@ -1023,6 +1029,8 @@
                     width: 100%;
                 }
                 p {
+                    background-color: $pink;
+                    padding: 40px 30px;
                     font-size: 21px;
                     font-family: $unna;
                     margin: 0;
