--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -160,6 +160,20 @@
                             font-family: $alegreya;
                         }
 
+                        &:nth-child(2) {
+                            ul {
+                                li {
+                                    &:first-child{
+                                        a {
+                                            font-weight: 700;
+                                            font-size: 16px;
+                                            color: $black;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
                         &:nth-child(3) {
                             ul {
                                 li {
