--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -1057,7 +1057,7 @@
         .flex {
             .text-info {
                 @media (max-width: 480px) {
-                    bottom: 150px;
+                    top: 45%;
                     right: -17px;
                     width: 100%;
                 }
