--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -327,8 +327,8 @@
         }
         img {
             border: 1px solid #dbdbdb;
-            max-width: 296px;
-            max-height: 296px;
+            width: 296px;
+            height: 292.02px;
             width: 100%;
             height: auto;
         }
