--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -128,8 +128,8 @@
                                 width: 294.33px;
                                 height: 294.33px;
                                 @media (max-width: 980px) {
-                                    width: unset;
-                                    height: unset;
+                                    width: 100%;
+                                    height: 100%;
                                 }
                             }
                         }
