img yuka / nutriscore

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -333,11 +333,18 @@
                                             .yuka {
                                                 margin-right: 40px;
                                                 margin-top: 14px;
-                                            }
-                                            div {
+
                                                 img {
-                                                    max-height: 45px;
+                                                    width: 16px;
+                                                    height: 26px;
                                                 }
+                                            }
+                                            .nutriscore {
+                                                img {
+                                                    width: 83.06px;
+                                                    height: 45px;
+                                                }
+                                                
                                             }
                                         }
                                         .add-to-cart {
