img carousel fiche produit

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -70,20 +70,21 @@
                         }
                         ul {
                             li {
-                                img {
-                                    border: none;
-                                    width: 450px;
-                                    height: 450px;
-                                }
-
                                 .img-thumbnail {
-                                    width: 450px;
-                                    height: 438px;
+                                    @media (max-width: 961px) {
+                                        width: 450px;
+                                        height: 450px;
+                                    }  
 
-                                    @media (max-width: 480px) {
-                                        width: 397px;
-                                        height: 397px;
-                                    }                                    
+                                    @media (min-width: 769px) and (max-width: 960px) {
+                                        max-width: 450px;
+                                        max-height: 450px;
+                                    }
+            
+                                    @media (max-width: 768px) {
+                                        max-width: 734px;
+                                        max-height: 734px;
+                                    }                                   
                                 }
                             }
                         }
