--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -10,14 +10,25 @@
             margin: 0 auto;
             .row {
                 width: 100%;
-                .logo {
-                    width: 150px;
-                    height: 104px;
-                    margin-left: 60px;
-                    @media (max-width: 769px) {
-                        display: block;
-                        margin: 0 auto;
-                        margin-bottom: 30px;
+                .col-md-2 {
+                    @media (min-width: 769px) and (max-width: 1200px) {
+                        width: 100%;
+                    }
+                    .logo {
+                        width: 150px;
+                        height: 104px;
+                        margin-left: 60px;
+                        @media (max-width: 1200px) {
+                            display: block;
+                            margin: 0 auto;
+                            margin-bottom: 30px;
+                        }
+                    }
+                }
+                .col-md-7 {
+                    @media (min-width: 769px) and (max-width: 1200px) {
+                        width: 70%;
+                        margin-left: 15px;
                     }
                 }
                 .home_popup {
@@ -147,6 +158,10 @@
                         }
                     }
                 }
+
+                .col-md-12 {
+                    padding: 0;
+                }
                 .col-md-7 {
                     .insta {
                         font-weight: bold;
@@ -191,6 +206,14 @@
                                     }
                                 }
                             }
+                        }
+                    }
+                }
+
+                .block-truspilot {
+                    iframe {
+                        @media (min-width: 769px) and (max-width: 1200px) {
+                            width: 100%!important;
                         }
                     }
                 }
@@ -304,6 +327,7 @@
                             }
                             div {
                                 padding-left: 0;
+                                padding-right: 0;
                                 >p {
                                     padding-left: 0;
                                     margin-top: 10px;
