--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -427,6 +427,7 @@
                                         .owl-stage {
                                             display: flex;
                                             justify-content: space-between;
+                                            padding-left: 10px;
 
                                             @media (max-width: 480px) {
                                                 padding-left: 10px;
@@ -563,6 +564,7 @@
                                     #ingredient {
                                         margin-bottom: 50px;
                                         @media (max-width: 768px) {
+                                            padding-left: 20px;
                                             padding-right: 20px;
                                         }
                                         p {
