retours + popup temporaire

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -1061,6 +1061,7 @@
                 top: 15%;
                 width: 500px;
                 z-index: 99;
+                right: 0;
                 
                 @media (max-width: 769px) {
                     top: 45%;
