--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -10,6 +10,9 @@
             margin: 0 auto;
             .row {
                 width: 100%;
+                &::after {
+                    display:none;
+                }
                 .col-md-2 {
                     @media (min-width: 769px) and (max-width: 1200px) {
                         width: 100%;
@@ -33,6 +36,15 @@
                 }
                 .home_popup {
                     display: none;
+                    background: rgba(0,0,0,0.5);
+                    position: fixed;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    z-index: 999;
                     
                     #list-builder {
                         display:block;
@@ -42,6 +54,8 @@
                     #popup-box {
                         display:block;
                         height: auto;
+                        background-color: #FEF9F4;
+
                         @media (max-width: 769px) {
                             width: 300px;
                             top: 50%;
@@ -56,7 +70,6 @@
                         #popup-box-content {
                             height: auto;
                             margin: 0;
-                            background-color: #FEF9F4;
                             @media (max-width: 769px) {
                                 border: none;
                             }
@@ -343,7 +356,7 @@
             padding-left: 40px;
             .yuka {
                 position: absolute;
-                bottom: 7px;
+                bottom: 22px;
                 left: 0;
                 img {
                     width: 30px;
