--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -321,7 +321,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         }
         &:last-child {
             margin: 30px 0;
-            background-image: url("../img/assiette.jpg");
+            background-image: url("../img/_DSF2237.jpg");
             background-size: cover;
             width: 340px;
             @media (max-width: 1200px) {
