test reseau sociaux

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -249,13 +249,13 @@
             }
         }
     }
-    .block-social {
-        .linkedin,
-        .twitter,
-        .pinterest {
-            display: none;
-        }
-    }
+    // .block-social {
+    //     .linkedin,
+    //     .twitter,
+    //     .pinterest {
+    //         display: none;
+    //     }
+    // }
     .blockreassurance {
         @media (max-width: 480px) {
             margin-top: 30px;
