--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -228,38 +228,7 @@
                     }
                 }
             }
-            .container {   
-                .right-block {
-                    @media (min-width: 768px) {
-                        padding-left: 2rem;
-                        position: absolute;
-                        right: 0;
-                        top: 0;
-                    }
 
-                    @media (max-width: 768px) {
-                        display: flex;
-                        flex-direction: column;
-                    }
-
-                    .block_newsletter {
-                        @media (max-width: 768px) {
-                            padding-left: 15px;
-                        }
-                        .row {
-                            @media (max-width: 768px) {
-                                padding-left: 15px;
-                            }
-                            >p {
-                                @media (max-width: 768px) {
-                                    padding: 0;
-                                    margin-left: -15px;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
             .block-title {
                 font-family: 'Unna';
                 font-size: 20px;
@@ -338,81 +307,111 @@
         border-bottom: 1px solid #dbdbdb;
     }
     .container {
-        .block_newsletter {
-            bottom: auto!important;
-            .row {
-                >div {
-                    form {
-                        @media (max-width: 768px) {
-                            margin-left: -30px;
-                        }
-                        @media (max-width: 480px) {
-                            margin-right: -30px;
-                        }
-                        .row {
-                            margin-left: 0;
-                            padding-left: 0;
-                            input.hidden-sm-up {
-                                margin-top: 10px;
-                                width: 100%;
+        .right-block {
+            @media (min-width: 768px) {
+                padding-left: 2rem;
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+
+            @media (max-width: 768px) {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .block_newsletter {
+                bottom: auto!important;
+                @media (max-width: 768px) {
+                    padding-left: 15px;
+                }
+                .row {
+                    @media (max-width: 768px) {
+                        padding-left: 15px;
+                    }
+                    >div {
+                        form {
+                            @media (max-width: 768px) {
+                                margin-left: -30px;
                             }
-                            div {
+                            @media (max-width: 480px) {
+                                margin-right: -30px;
+                            }
+                            .row {
+                                margin-left: 0;
                                 padding-left: 0;
-                                padding-right: 0;
-                                >p {
-                                    padding-left: 0;
+                                input.hidden-sm-up {
                                     margin-top: 10px;
+                                    width: 100%;
+                                }
+                                input.float-xs-right {
+                                    @media (max-width: 768px) {
+                                        display: none;
+                                    }
+                                }
+                                div {
+                                    padding-left: 0;
+                                    padding-right: 0;
+                                    >p {
+                                        padding-left: 0;
+                                        margin-top: 10px;
+
+                                        @media (max-width: 768px) {
+                                            padding: 0;
+                                            margin-left: -15px;
+                                        }
+                                    }
                                 }
                             }
                         }
                     }
                 }
             }
-        }
-        .block-yuka {
-            position: relative;
-            padding-left: 40px;
-            .yuka {
-                position: absolute;
-                bottom: 22px;
-                left: 0;
+            .block-yuka {
+                position: relative;
+                padding-left: 40px;
+                .yuka {
+                    position: absolute;
+                    bottom: 22px;
+                    left: 0;
 
-                @media (max-width: 768px) {
-                    bottom: 11px;
+                    @media (max-width: 768px) {
+                        bottom: 11px;
+                    }
+
+                    img {
+                        width: 30px;
+                        height: 30px;
+                    }
                 }
-                
-                img {
-                    width: 30px;
-                    height: 30px;
+                .yuka-note {
+                    font-family: 'RobotoMono';
+                    font-weight: 700;
+                    font-size: 11px;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
                 }
+                // .yuka-note::before {
+                //     content: url("https://yuka.io/wp-content/uploads/presskit/logo-carotte.png");
+                //     // background-image: url("https://yuka.io/wp-content/uploads/presskit/logo-carotte.png");
+                //     width: 23px;
+                //     height: 30px;
+                //     display: block;
+                //     position: absolute;
+                //     left: 0;
+                //     bottom: 7px;
+                // }
             }
-            .yuka-note {
-                font-family: 'RobotoMono';
-                font-weight: 700;
-                font-size: 11px;
-                letter-spacing: 1px;
-                text-transform: uppercase;
-            }
-            // .yuka-note::before {
-            //     content: url("https://yuka.io/wp-content/uploads/presskit/logo-carotte.png");
-            //     // background-image: url("https://yuka.io/wp-content/uploads/presskit/logo-carotte.png");
-            //     width: 23px;
-            //     height: 30px;
-            //     display: block;
-            //     position: absolute;
-            //     left: 0;
-            //     bottom: 7px;
-            // }
-        }
-        .membre {
-            display:none;
-            margin-top: 30px;
-            a {
-                font-family: 'RobotoMono';
-                font-size: 11px;
-                font-weight: 700;
-                letter-spacing: 1px;
-                text-transform: uppercase;
+            .membre {
+                display:none;
+                margin-top: 30px;
+                a {
+                    font-family: 'RobotoMono';
+                    font-size: 11px;
+                    font-weight: 700;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
+                }
             }
         }
     }
