--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -307,6 +307,11 @@
         border-bottom: 1px solid #dbdbdb;
     }
     .container {
+        position: relative;
+
+        @media (max-width: 768px) {
+            padding-bottom: 60px;
+        }
         .right-block {
             @media (min-width: 768px) {
                 padding-left: 2rem;
@@ -414,26 +419,33 @@
                 }
             }
         }
-    }
-    .row {
-        .text-sm-center {
-            margin-top: 100px;
-            text-align: center;
-            color: $black;
 
-            @media (max-width: 992px) {
-                margin-top: 20px;
+        .copyright {
+            @media (max-width: 768px) {
+                position: absolute;
+                bottom: 15px;
+    
             }
-            a {
-                display: inline-block;
-                padding-left: 1rem;
+            .text-sm-center {
+                margin-top: 100px;
+                text-align: center;
                 color: $black;
-            }
-            @media (max-width: 480px) {
+    
+                @media (max-width: 992px) {
+                    margin-top: 20px;
+                }
                 a {
-                    display: block;
+                    display: inline-block;
+                    padding-left: 1rem;
+                    color: $black;
+                }
+                @media (max-width: 480px) {
+                    a {
+                        display: block;
+                    }
                 }
             }
         }
+
     }
 }
