--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -332,7 +332,13 @@
                 }
                 .row {
                     @media (max-width: 768px) {
-                        padding-left: 15px;
+                        padding-left: 15px!important;
+                    }
+                    #block-newsletter-label {
+                        @media (max-width: 768px) {
+                            padding: 0;
+                            margin-left: -15px;
+                        }
                     }
                     >div {
                         form {
@@ -357,14 +363,16 @@
                                 div {
                                     padding-left: 0;
                                     padding-right: 0;
+
+                                    &.col-xs-12 {
+                                        @media (max-width: 768px) {
+                                            padding-left: 15px;
+                                        }
+                                    }
+
                                     >p {
                                         padding-left: 0;
                                         margin-top: 10px;
-
-                                        @media (max-width: 768px) {
-                                            padding: 0;
-                                            margin-left: -15px;
-                                        }
                                     }
                                 }
                             }
