--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -93,6 +93,7 @@
         .h2 {
             @include title;
             margin-bottom: 50px;
+            font-size: 18px;
         }
         .products {
             @media (max-width: 480px) {
