--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -226,6 +226,7 @@
                                         top: 5px;
                                         transform: translate(-50%, -50%);
                                         font-family: $unna;
+                                        color: $black;
                                     }
 
                                     .up:before {
@@ -237,6 +238,7 @@
                                         top: 5px;
                                         transform: translate(-50%, -50%);
                                         font-family: $unna;
+                                        color: $black;
                                     }
 
 
