--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -239,6 +239,7 @@
                                 top: 5px;
                                 transform: translate(-50%, -50%);
                                 font-family: $unna;
+                                color: $black;
                             }
 
                             .up:before {
@@ -250,6 +251,7 @@
                                 top: 5px;
                                 transform: translate(-50%, -50%);
                                 font-family: $unna;
+                                color: $black;
                             }
 
                             input {
