--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -853,6 +853,7 @@
                             top: 5px;
                             transform: translate(-50%, -50%);
                             font-family: $unna;
+                            color: $black;
                         }
 
                         .up:before {
@@ -864,6 +865,7 @@
                             top: 5px;
                             transform: translate(-50%, -50%);
                             font-family: $unna;
+                            color: $black;
                         }
 
 
