--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -135,7 +135,8 @@
     .form-check-filtre {
         position: relative;
         margin-bottom: 10px;
-        input[type="checkbox"] {
+        input[type="checkbox"],
+        input[type="radio"] {
             opacity: 0;
             position: absolute;
             left: 0;
@@ -143,7 +144,8 @@
             z-index: 99999;
             cursor: pointer;
         }
-        input[type="checkbox"]+label::before {
+        input[type="checkbox"]+label::before,
+        input[type="radio"]+label::before {
             content: '';
             border: 1px solid $black;
             height: 15px;
@@ -154,7 +156,14 @@
             top: 1px;
             padding: 3px;
         }
-        input[type="checkbox"]:checked+label::before {
+
+        input[type="radio"]+label::before {
+            border-radius: 50%;
+        }
+
+
+        input[type="checkbox"]:checked+label::before,
+        input[type="radio"]:checked+label::before {
             background-color: $black;
             background-clip: content-box;
         }
